# portfolio-ryadB

./: .gitignore  CV_Ryad_Bouderga.html  DEPLOYMENT.md  LICENSES.md  ROADMAP.md  TASK  TASK-REFONTE-1.md  TASK-REFONTE-2.md  TASK-REFONTE-3.md  cv-maison-negoce.html  cv-private-equity.html  deploy.sh  eslint.config.mjs  instrumentation.ts  megaprompt-orderflow-v2.md  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  setup-production-db.md  tsconfig.json  vercel.json  vitest.config.ts
PORTFOLIO/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  manifest.ts  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts  twitter-image.tsx
components/: BiasDashboard.tsx  ErrorSuppressor.tsx
desktop/: .env.example  .env.production  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/examples/: binance_subscribe.rs  bridge_dump.rs  bybit_orderbook_subscribe.rs  bybit_subscribe.rs  databento_cost_probe.rs  deribit_subscribe.rs  rithmic_apex.rs  rithmic_connect.rs  rithmic_footprint.rs  rithmic_heartbeat.rs  rithmic_login.rs  rithmic_subscribe.rs  rithmic_trace.rs
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: auth.rs  lib.rs  machine.rs  prefs.rs  state.rs
desktop/src-tauri/src/brokers/: credentials.rs  mod.rs  presets.rs  vault.rs
desktop/src-tauri/src/cache/: mod.rs  reader.rs  writer.rs
desktop/src-tauri/src/commands/: account.rs  ai_agent.rs  bridge.rs  bridge_depth.rs  bridge_events.rs  brokers.rs  cache.rs  crypto.rs  crypto_events.rs  crypto_tick_events.rs  databento.rs  gex.rs  mod.rs  news.rs  option_flow.rs  quantower_bridge.rs  quantower_bridge_depth.rs  quantower_bridge_events.rs  rithmic.rs  rithmic_events.rs
desktop/src-tauri/src/connectors/: adapter.rs  error.rs  mod.rs  tick.rs
desktop/src-tauri/src/connectors/alpaca/: api_key.rs  client.rs  error.rs  gex.rs  mod.rs  options.rs  trades.rs
desktop/src-tauri/src/connectors/anthropic/: api_key.rs  client.rs  error.rs  mod.rs
desktop/src-tauri/src/connectors/binance/: adapter.rs  client.rs  mod.rs  parser.rs  reader.rs
desktop/src-tauri/src/connectors/bridge/: adapter.rs  client.rs  mod.rs  parser.rs  reader.rs
desktop/src-tauri/src/connectors/bybit/: adapter.rs  client.rs  heartbeat.rs  mod.rs  orderbook.rs  parser.rs  reader.rs
desktop/src-tauri/src/connectors/databento/: api_key.rs  black_scholes.rs  mod.rs  options.rs
desktop/src-tauri/src/connectors/deribit/: adapter.rs  client.rs  heartbeat.rs  mod.rs  parser.rs  reader.rs
desktop/src-tauri/src/connectors/finnhub/: api_key.rs  cache.rs  calendar.rs  client.rs  error.rs  mod.rs  news.rs
desktop/src-tauri/src/connectors/rithmic/: account_types.rs  adapter.rs  auth.rs  client.rs  gateway_discovery.rs  heartbeat.rs  history.rs  history_probe.rs  history_ticks.rs  mod.rs  order_plant.rs  order_subscribe.rs  pnl_plant.rs  reader.rs
desktop/src-tauri/src/connectors/rithmic/proto/: mod.rs
desktop/src-tauri/src/connectors/tradier/: api_key.rs  client.rs  error.rs  gex.rs  mod.rs  options.rs
desktop/src-tauri/src/engine/: footprint.rs  mod.rs  orderbook.rs
desktop/src-tauri/src/journal/: commands.rs  db.rs  mod.rs  rithmic_sync.rs
docs/: ATAS_FOOTPRINT_GUIDE.md  DELTA_PROFILE_ARCHITECTURE.md  LESSONS.md  LIQUIDITY_HEATMAP_ARCHITECTURE.md  MEDIUM_TERM_TASKS.md  MEMORY_PROFILING.md  PERFORMANCE_PROFILING.md  PHASES.md  QUICK_CHECKLIST.md  RITHMIC_DATA_INVESTIGATION_2026-05-08.md  ROADMAP_PROD_V1.md  SENTRY_SETUP.md  TOOLS_ARCHITECTURE.md  V1_AUDIT_SENZOUKRIA.md  V1_MIGRATION_PLAN.md  VALIDATION_FINALE.md  release-v0.2.0-discord.md
gateway/: Dockerfile  docker-compose.yml  package-lock.json  package.json  tsconfig.json
hooks/: index.ts  useAutoContrast.ts  useAutoTrackTrades.ts  useDailyNotes.ts  useEconomicCalendar.ts  useEventNotifications.ts  useFuturesData.ts  useHistoricalData.ts  useIBConnection.ts  useJournal.ts  useJournalAnalytics.ts  useJournalCalendar.ts  useLiveAgent.ts  useLiveFootprint.ts  useLiveVolumeProfile.ts  useOptimizedFilter.ts  useOptimizedKeyboard.ts  useOrderbook.ts  usePageActive.tsx  usePlaybook.ts  usePriceAlerts.ts  useReplay.ts  useReplayKeyboard.ts  useScrollAnimations.ts  useSymbolPriceSync.ts  useTrades.ts  useTradovatePanel.ts
lib/: db.ts  hydrate-stores.ts  stripe.ts  useLiveSpot.ts  useTradingData.ts  useWallAlerts.ts  utils.ts
ml/: __init__.py  main.py  requirements.txt
playwright-report/: index.html
prisma/: schema.prisma
public/: OrderflowBridge.cs  font-lab.html  llms.txt
rithmic/: README.md  requirements.txt  rithmic_bridge.py
scripts/: add-trial-senbeta5.ts  check-app-version.ps1  check-user-status.ts  generate-ed25519-keys.ts  init-promo-codes.ts  promote-user-to-pro.ts  setup-stripe.ts  test-dxfeed.ts  test-license-jwt.ts  test-promo-code.ts  update-senbeta5.ts  verify-stripe-pro-price.ts
server/: ConnectionManager.js  TradovateProxy.js  index.js
stores/: index.ts  useAccountPrefsStore.ts  useAccountRulesStore.ts  useAlertsStore.ts  useBacktestStore.ts  useChartSyncStore.ts  useChartTemplatesStore.ts  useChartToolsStore.ts  useCrosshairStore.ts  useDataFeedStore.ts  useDrawingStore.ts  useEquityOptionsStore.ts  useFavoritesToolbarStore.ts  useFootprintSettingsStore.ts  useFootprintStore.ts  useFuturesStore.ts  useGEXStore.ts  useHeatmapSettingsStore.ts  useIndicatorStore.ts  useJournalStore.ts  useLiveStore.ts  useMarketStore.ts  useMicrostructureStore.ts  useNewsSettingsStore.ts  useNewsThemeStore.ts  useOptionsStore.ts  useOrderbookStore.ts  usePreferencesStore.ts  useRecentChartsStore.ts  useReplayUIStore.ts  useSymbolPriceStore.ts  useThemeStore.ts  useTimezoneStore.ts  useToolSettingsStore.ts  useTradeStore.ts  useTradingStore.ts  (+2 more)
(+1204 files in other folders)
