[package]
name = "desktop"
version = "0.1.4"
description = "OrderflowV2 Desktop"
authors = ["OrderflowV2"]
edition = "2021"

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
reqwest        = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio          = { version = "1", features = ["sync", "rt", "macros", "time"] }
machine-uid    = "0.5"
thiserror      = "1"
