[package]
name = "desktop"
version = "0.1.12"
description = "OrderflowV2 Desktop"
authors = ["OrderflowV2"]
edition = "2021"

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
prost-build  = "0.12"
# Vendored protoc binary so the build doesn't need a system-wide
# protobuf compiler on every dev machine and CI runner.
protoc-bin-vendored = "3"

[dependencies]
tauri          = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
reqwest        = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio          = { version = "1", features = ["sync", "rt", "macros", "time"] }
machine-uid    = "0.5"
thiserror      = "1"

# Rithmic R|Protocol connector (Phase 7)
tokio-tungstenite = { version = "0.21", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
prost          = "0.12"
prost-types    = "0.12"
tokio-stream   = "0.1"
futures-util   = { version = "0.3", default-features = false, features = ["sink"] }
url            = "2.5"
async-trait    = "0.1"
tracing        = "0.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }
tokio              = { version = "1", features = ["sync", "rt", "macros", "time", "net"] }
chrono             = { version = "0.4", default-features = false, features = ["clock"] }

[[example]]
name = "rithmic_connect"
path = "examples/rithmic_connect.rs"

[[example]]
name = "rithmic_login"
path = "examples/rithmic_login.rs"

[[example]]
name = "rithmic_subscribe"
path = "examples/rithmic_subscribe.rs"

[[example]]
name = "rithmic_heartbeat"
path = "examples/rithmic_heartbeat.rs"

[[example]]
name = "rithmic_footprint"
path = "examples/rithmic_footprint.rs"
