[package]
name = "desktop"
version = "0.2.0"
description = "OrderflowV2 Desktop"
authors = ["OrderflowV2"]
edition = "2021"

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
prost-build  = "0.12"
# Vendored protoc binary so the build doesn't need a system-wide
# protobuf compiler on every dev machine and CI runner.
protoc-bin-vendored = "3"

[dependencies]
tauri          = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
reqwest        = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio          = { version = "1", features = ["sync", "rt", "macros", "time"] }
machine-uid    = "0.5"
thiserror      = "1"

# OS-native encrypted credential storage. We chose the `keyring` crate
# over Tauri Stronghold for two reasons:
#   1. Stronghold v2 plugin is JS-first and would route credential I/O
#      through the webview when our connector lives in Rust — awkward
#      and racy.
#   2. `keyring` wraps the OS-native vaults (Windows Credential Manager,
#      macOS Keychain, Linux Secret Service) which already handle
#      encryption-at-rest and per-user isolation. Same security
#      property as Stronghold without managing a snapshot password.
# The `Vault` interface is opaque so swapping back to Stronghold (or
# adding it as a second implementation) later is a one-file change.
keyring        = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }

# Rithmic R|Protocol connector (Phase 7)
tokio-tungstenite = { version = "0.21", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
prost          = "0.12"
prost-types    = "0.12"
tokio-stream   = "0.1"
futures-util   = { version = "0.3", default-features = false, features = ["sink"] }
url            = "2.5"
async-trait    = "0.1"
tracing        = "0.1"
# Tracing subscriber MUST be a runtime dep (not dev-only) — without it
# being in [dependencies], `tracing_subscriber::fmt::init()` from the
# main binary fails to link and all `tracing::` calls site-wide become
# silent no-ops. This was a real bug pre-2026-05-10 that hid every
# Rust-side error from the Tauri terminal.
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter"] }
# M3.5 — orderbook BTreeMap keyed by price (f64 isn't Ord; OrderedFloat
# wraps it with a NaN-rejecting Ord impl so the map keys work directly).
ordered-float  = "4"

# Journal native SQLite (FEAT-3 day 1). `bundled` ships SQLite source
# inside the binary so no external SQLite install is needed on user
# machines. Trade entries, daily notes, playbook setups all live in a
# single `journal.db` file under the OS app-data dir.
rusqlite       = { version = "0.31", features = ["bundled"] }
uuid           = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio              = { version = "1", features = ["sync", "rt", "macros", "time", "net"] }
chrono             = { version = "0.4", default-features = false, features = ["clock"] }
tempfile           = "3"

[[example]]
name = "rithmic_connect"
path = "examples/rithmic_connect.rs"

[[example]]
name = "rithmic_login"
path = "examples/rithmic_login.rs"

[[example]]
name = "rithmic_subscribe"
path = "examples/rithmic_subscribe.rs"

[[example]]
name = "rithmic_heartbeat"
path = "examples/rithmic_heartbeat.rs"

[[example]]
name = "rithmic_footprint"
path = "examples/rithmic_footprint.rs"

[[example]]
name = "binance_subscribe"
path = "examples/binance_subscribe.rs"

[[example]]
name = "bybit_subscribe"
path = "examples/bybit_subscribe.rs"

[[example]]
name = "deribit_subscribe"
path = "examples/deribit_subscribe.rs"

[[example]]
name = "bybit_orderbook_subscribe"
path = "examples/bybit_orderbook_subscribe.rs"

# Databento cost probe — checks the exact USD price of fetching 24h MNQ
# trades from GLBX.MDP3 before committing to an integration. Standalone,
# uses `metadata.get_cost` which is itself free (no credit consumption).
[[example]]
name = "databento_cost_probe"
path = "examples/databento_cost_probe.rs"
